make CommentList sparkle

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_1e0c06411835d1b"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -39,5 +40,7 @@
   "resolutions": {
     "jackspeak": "2.1.1",
     "styled-components": "^5"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "visual-testing-handbook-react-template@0.2.0"
 }
